added links to email and phone

--- a/app/src/main/res/layout/subject_about_item.xml
+++ b/app/src/main/res/layout/subject_about_item.xml
@@ -24,6 +24,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:autoLink="phone"
         android:text="@string/phone"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -35,6 +36,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:autoLink="email"
         android:text="@string/email"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
