--- a/app/src/main/res/layout/activity_general_information.xml
+++ b/app/src/main/res/layout/activity_general_information.xml
@@ -6,11 +6,13 @@
     android:layout_height="match_parent"
     tools:context=".activities.GeneralInformationActivity">
 
-    <TextView
-        android:id="@+id/textViewTest"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="TextView"
-        tools:layout_editor_absoluteX="181dp"
-        tools:layout_editor_absoluteY="97dp" />
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewGeneralInformationItems"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
