--- a/app/src/main/res/layout/general_information_item.xml
+++ b/app/src/main/res/layout/general_information_item.xml
@@ -46,6 +46,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonTitle" />
+        app:layout_constraintTop_toBottomOf="@+id/buttonTitle"
+        android:autofillHints="" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
