--- a/app/src/main/res/layout/activity_general_information.xml
+++ b/app/src/main/res/layout/activity_general_information.xml
@@ -6,6 +6,17 @@
     android:layout_height="match_parent"
     tools:context=".activities.GeneralInformationActivity">
 
+    <LinearLayout
+        android:id="@+id/linearLayoutSingleSubject"
+        android:layout_width="0dp"
+        android:layout_height="@dimen/constraint_layout_single_item_height"
+        android:layout_margin="8dp"
+        android:orientation="vertical"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewGeneralInformationItems"
         android:layout_width="0dp"
@@ -14,5 +25,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/linearLayoutSingleSubject" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
