--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -7,4 +7,8 @@
         android:icon="@android:drawable/ic_menu_add"
         android:title="@string/add_subject"
         app:showAsAction="always" />
+    <item
+        android:id="@+id/itemUpdate"
+        android:title="@string/refresh"
+        app:showAsAction="always" />
 </menu>
