--- a/app/src/main/res/layout/activity_single_health_condition.xml
+++ b/app/src/main/res/layout/activity_single_health_condition.xml
@@ -4,27 +4,24 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.generalinformation.GeneralInformationActivity">
+    tools:context=".activities.healthcondition.SingleHealthConditionActivity">
 
-    <LinearLayout
-        android:id="@+id/linearLayoutSingleSubject"
-        android:layout_width="0dp"
-        android:layout_height="@dimen/constraint_layout_single_item_height"
-        android:layout_margin="8dp"
-        android:orientation="vertical"
+    <TextView
+        android:id="@+id/textViewHealthConditionTitle"
+        android:layout_width="409dp"
+        android:layout_height="wrap_content"
+        android:text="@string/title"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerViewGeneralInformationItems"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:id="@+id/recyclerViewSingleHealthCondition"
+        android:layout_width="409dp"
+        android:layout_height="710dp"
+        android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayoutSingleSubject" />
-
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
