--- a/app/src/main/res/layout/activity_health_condition.xml
+++ b/app/src/main/res/layout/activity_health_condition.xml
@@ -6,12 +6,24 @@
     android:layout_height="match_parent"
     tools:context=".activities.healthcondition.HealthConditionActivity">
 
+    <LinearLayout
+        android:id="@+id/linearLayoutSingleSubject"
+        android:layout_width="0dp"
+        android:layout_height="@dimen/constraint_layout_single_item_height"
+        android:layout_margin="8dp"
+        android:orientation="vertical"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewHealthCondition"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/linearLayoutSingleSubject" />
 </androidx.constraintlayout.widget.ConstraintLayout>
