added function ability

--- a/app/src/main/res/layout/subject_about_item.xml
+++ b/app/src/main/res/layout/subject_about_item.xml
@@ -15,6 +15,7 @@
         android:layout_marginTop="8dp"
         android:text="@string/name"
         android:textSize="20sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -57,6 +58,8 @@
         android:id="@+id/divider"
         android:layout_width="0dp"
         android:layout_height="4dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:background="@android:color/holo_orange_dark"
         app:layout_constraintBottom_toBottomOf="parent"
