--- a/app/src/main/res/layout/activity_single_health_condition.xml
+++ b/app/src/main/res/layout/activity_single_health_condition.xml
@@ -10,22 +10,24 @@
         android:id="@+id/textViewHealthConditionTitle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
         android:text="@string/title"
-        android:textSize="22sp"
+        android:textSize="26sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayoutSingleSubject" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <View
         android:id="@+id/divider4"
         android:layout_width="0dp"
-        android:layout_height="3dp"
-        android:layout_marginStart="8dp"
+        android:layout_height="2dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginEnd="16dp"
         android:background="?android:attr/listDivider"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -37,19 +39,20 @@
         android:layout_width="0dp"
         android:layout_height="@dimen/constraint_layout_single_item_height"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/divider4" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewSingleHealthCondition"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/divider4" />
+        app:layout_constraintTop_toBottomOf="@+id/linearLayoutSingleSubject" />
 </androidx.constraintlayout.widget.ConstraintLayout>
