--- a/app/src/main/res/layout/activity_single_function_ability.xml
+++ b/app/src/main/res/layout/activity_single_function_ability.xml
@@ -6,23 +6,51 @@
     android:layout_height="match_parent"
     tools:context=".activities.functionability.SingleFunctionAbilityActivity">
 
+    <TextView
+        android:id="@+id/textViewTitle"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
+        android:text="@string/title"
+        android:textSize="26sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <View
+        android:id="@+id/divider6"
+        android:layout_width="0dp"
+        android:layout_height="2dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
+        android:background="?android:attr/listDivider"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />
+
     <LinearLayout
         android:id="@+id/linearLayoutSingleSubject"
         android:layout_width="0dp"
         android:layout_height="@dimen/constraint_layout_single_item_height"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/divider6" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerViewNewTest"
-        android:layout_width="391dp"
-        android:layout_height="709dp"
-        tools:layout_editor_absoluteX="1dp"
-        tools:layout_editor_absoluteY="141dp" />
+        android:id="@+id/recyclerViewSingleFunctionAbility"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayoutSingleSubject" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
