--- a/app/src/main/res/layout/general_information_item.xml
+++ b/app/src/main/res/layout/general_information_item.xml
@@ -10,6 +10,8 @@
         android:id="@+id/buttonTitle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
         android:backgroundTint="@android:color/holo_orange_dark"
         android:text="@string/title"
         android:textColor="#4E342E"
