--- a/app/src/main/res/layout/general_information_item.xml
+++ b/app/src/main/res/layout/general_information_item.xml
@@ -40,6 +40,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
+        android:autofillHints=""
         android:ems="10"
         android:gravity="start|top"
         android:hint="@string/hint_comment"
@@ -48,7 +49,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonTitle"
-        android:autofillHints="" />
+        app:layout_constraintTop_toBottomOf="@+id/buttonTitle" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
